syntax = "proto3";

package protos;

option go_package = "genprotos/";

service ExchangeService {
    rpc CreateExchange (CreateExchangeRequest) returns (ExchangeResponse);
    rpc GetExchange (ExchangeIdRequest) returns (GetExchangeResponse);
    rpc UpdateExchange (UpdateExchangeRequest) returns (ExchangeResponse);
    rpc DeleteExchange (ExchangeIdRequest) returns (ExchangeResponse);
    rpc ListExchanges (GetAllExchangeRequest) returns (GetAllExchangeResponse);
    rpc GetStatistika (ExchangeStatisticsRequest) returns (ExchangeStatisticsResponse);
    rpc GetExchangeGetbyProductId(GetExchangeGetbyProductIdRequest) returns(GetExchangeGetbyProductIdResponse);
}

message CreateExchangeRequest {
    string product_id = 1;
    int32 amount = 2;
    double price = 3;
    string status = 4; // Enum: buy, sell
    string contract_id = 5;
    string exchange_id=6;
}
message CreateExchangeRequestSwagger{
    string product_id = 1;
    int32 amount = 2;
    double price = 3;
    string contract_id = 4;
    string status=5;
    string exchange_id=6;
}
message ExchangeIdRequest {
    string id = 1;
}

message GetExchangeResponse {
    string id = 1;
    string product_id = 2;
    int32 amount = 3;
    double price = 4;
    string status = 5;
    string contract_id = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message UpdateExchangeRequest {
    string id = 1;
    string product_id = 2;
    int32 amount = 3;
    double price = 4;
    string contract_id = 6;
}

message ExchangeResponse {
    string message = 1;
    bool success = 2;
}

message GetAllExchangeRequest {
    string product_id = 1;
    string status = 2;
    int32 limit = 3;
    int32 page = 4;
}
message GetExchangeGetbyProductIdRequest{
    string product_id = 1;
    int32 limit = 2;
    int32 page = 3;
}

message GetExchangeGetbyProductIdList{
    int32 amount = 1;
    double price = 2;
    string created_at = 3; 
    string id=4;
}

message GetExchangeGetbyProductIdResponse{
    repeated GetExchangeGetbyProductIdList exchange=1;
    int64 count =2;
}


message GetAllExchangeResponse {
    repeated GetExchangeResponse all_exchanges = 1;
    int32 count = 2;
    string message = 3;
}



message ExchangeStatisticsRequest {
    int32 month = 1;
    int32 year = 2;
}

message ExchangeStatisticsResponse {
    int32 total_bought = 1;
    int32 total_sold = 2;
    double total_spend = 3;
    double total_revenue = 4;
    int32 net_amount = 5;
    double net_profit = 6;
}
