syntax = "proto3";

package protos;

option go_package = "genprotos/";

service TransactionService {
    rpc CreateTransaction (CreateTransactionRequest) returns (TransactionResponse);
    rpc GetTransaction (TransactionIdRequest) returns (GetTransactionResponse);
    rpc UpdateTransaction (UpdateTransactionRequest) returns (TransactionResponse);
    rpc DeleteTransaction (TransactionIdRequest) returns (TransactionResponse);
    rpc ListTransactions (GetAllTransactionRequest) returns (GetAllTransactionResponse);
    rpc CheckTransactions(CheckRequest) returns (CheckResponse);
    rpc TestNotification (Testresponse) returns (Testrequest);
} 

message CreateTransactionRequest {
    string contract_id = 1;
    double price = 2;
    int32 duration = 3; 
}

message TransactionIdRequest {
    string id = 1;
}

message GetTransactionResponse {
    string id = 1;
    string contract_id = 2;
    double price = 3;
    int32 duration = 4;
    string created_at = 5;
}

message UpdateTransactionRequest {
    string id = 1;
    string contract_id = 2;
    double price = 3;
    int32 duration = 4;
}

message TransactionResponse {
    string message = 1;
    bool success = 2;
}

message GetAllTransactionRequest {
    string contract_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetAllTransactionResponse {
    repeated GetTransactionResponse all_transactions = 1;
    int32 count = 2;
    string message = 3;
}

message CheckRequest{
    string user_id=1;
    string storage_id=2;
}

message CheckResponse{
    string message = 1;
}

message Testresponse{

}

message Testrequest{
    string message =1;
}